// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImge debe de mostar el componente correctamente con la imagen personalizado 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;

exports[`ProductImge should debe de mostar el componente con la imagen del producto  1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
